Updates from Overleaf

--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -94,7 +94,7 @@ Nicholas L. Swanson-Hysell\textsuperscript{1}
 
 \linenumbers
 
-These supplementary information materials provide details on the model framework used in this study. Code associated with this study can be found at: \url{https://github.com/Swanson-Hysell-Group/XXX}.
+These supplementary information materials provide details on the model framework used in this study. Code associated with this study can be found at: \url{https://github.com/Swanson-Hysell-Group/GEOCLIM_Modern}.
 
 \section*{Silicate Weathering Component}
 
@@ -124,7 +124,7 @@ The silicate weathering component of the GEOCLIM model has been modified from th
 \end{equation}
 
 \noindent
-Equation \ref{eq:1} is a statement of material conservation, where $h$ is the total height of the regolith (m), $t$ is the model time (yr), $P_{r}$ is the regolith production rate (m/yr), and $E_{p}$ is the physical erosion rate (m/yr). Equation \ref{eq:2} describes how the residual fraction of weatherable phases ($x$, unitless) changes as a function of time ($t$, yr) and depth (where $z$ is the height above the base of the regolith; m). $K \tau^{\sigma}$ is the dissolution rate constant, which depends on the local climate (captured by $K$, yr$^{-1-\sigma}$) and the time that a given rock particle has spent in the regolith ($\tau$, yr) to some power $\sigma$ (unitless) which implements a time-dependence. Equation \ref{eq:3} describes how the time that a given rock particle has spent in the regolith changes as time in the model progresses.
+Equation \ref{eq:1} is a statement of material conservation, where $h$ is the total height of the regolith (m), $t$ is the model time (yr), $P_{r}$ is the regolith production rate (m/yr), and $E_{p}$ is the physical erosion rate (m/yr). Equation \ref{eq:2} describes how the residual fraction of weatherable phases ($x$, unitless) changes as a function of time ($t$, yr) and depth ($z$; m). $K \tau^{\sigma}$ is the dissolution rate constant, which depends on the local climate (captured by $K$, yr$^{-1-\sigma}$) and the time that a given rock particle has spent in the regolith ($\tau$, yr) to some power $\sigma$ (unitless) which implements a time-dependence. Equation \ref{eq:3} describes how the time that a given rock particle has spent in the regolith changes as time in the model progresses.
 
 The net weathering rate in the regolith column ($W$, m/yr) can then be calculated with:
 
@@ -241,14 +241,14 @@ The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/W_vs_r2.jpg}
-    \caption{\textbf{A)} Modeled global \COtwo consumption vs. the coefficient of determination ($r^{2}$) between modeled and data-constrained \COtwo consumption in each of the watersheds. Each point represents model output using one of the 93,600 parameter combinations. \textbf{B)} Same as A, but zoomed to the plotting space with positive coefficient of determination values. The black line represents the full range of estimates of the present-day non-anthropogenic global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a}. The black box represents the range of these estimates preferred by \citet{Gerlach2011a}.}
+    \caption{\textbf{A)} Modeled global \COtwo consumption vs. the coefficient of determination ($r^{2}$) between modeled and data-constrained \COtwo consumption in each of the watersheds. Each point represents model output using one of the 93,600 parameter combinations (Table \ref{tab:parameter_combinations}). \textbf{B)} Same as A, but zoomed to the plotting space with positive coefficient of determination values. The black line represents the full range of estimates of the present-day non-anthropogenic global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a}. The black box represents the range of these estimates preferred by \citet{Gerlach2011a}.}
     \label{fig:W_vs_r2}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/r2_cross_plot.pdf}
-    \caption{Modeled vs. data-constrained \COtwo consumption in watersheds around the world. \textbf{A)} Each point represents a single watershed, and the y-value of the point shows the mean value of the 5,381 parameter combinations that produce individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day. Whiskers extend to the minimum and maximum modeled watershed \COtwo consumption fluxes for the 5,381 parameters combinations. The red dashed line is the 1:1 line, the blue dashed line is the 2:1 line, and the cyan dashed lines are the 5:1 and 10:1 lines. \textbf{B)} Same as A, but only showing the parameter combination that produced that highest $r^{2}$. The chemical weathering and regolith thickness maps of this parameter combination are shown in Figure \ref{fig:weathering_regolith_maps}.}
+    \caption{Modeled vs. data-constrained \COtwo consumption in watersheds around the world. \textbf{A)} Each point represents a single watershed, and the y-value of the point shows the mean value of the 5,381 parameter combinations that produce individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day (i.e. the orange points in Figure \ref{fig:W_vs_r2}). Whiskers extend to the minimum and maximum modeled watershed \COtwo consumption fluxes for the 5,381 parameters combinations. The red dashed line is the 1:1 line, the blue dashed line is the 2:1 line, and the cyan dashed lines are the 5:1 and 10:1 lines. \textbf{B)} Same as A, but only showing the parameter combination that produced that highest $r^{2}$. The chemical weathering and regolith thickness maps of this parameter combination are shown in Figure \ref{fig:weathering_regolith_maps}.}
     \label{fig:r2_cross_plot}
 \end{figure}
 
@@ -300,15 +300,15 @@ We compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg fluxes) u
 \noindent
 $M_{i}$ is the modeled \COtwo consumption over watershed $i$, $O_{i}$ is the observed \COtwo consumption over watershed $i$, and $\overline{\log_{10}(O)}$ is the mean of the log of observed \COtwo consumption over all watersheds.
 
-The majority of the original 93,600 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using Equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}<0.4$, which leaves 5,381 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}).
+The majority of the original 93,600 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using Equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}\leq0.4$, which leaves 5,381 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}).
 
 Global CO$_{2}$ consumption calculated from these 5,381 parameter combinations ranges from 2.9$\times10^{12}$~mol/yr to 7.7$\times10^{12}$~mol/yr, with a mean of 5.7$\times10^{12}$~mol/yr. These estimates fall within the range of those independently estimated in the literature for the present-day: the full range of estimates of the present-day non-anthropogenic global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a} is 3.0--10.0$\times10^{12}$~mol/yr, with the preferred range of those estimates being 3.4--5.9$\times10^{12}$~mol/yr (Fig. \ref{fig:W_vs_r2}B).
 
-Each parameter combination predicts a different total \COtwo consumption that should match the \COtwo degassing at steady-state. Hence, in the GEOCLIM experiments, each parameter combination is used with its corresponding steady-state \COtwo degassing. In these estimates we are not including the effects of reverse weathering \citep{Michalopoulos1995a} as it is not clear how it should be parameterized and it is interpreted to be a relatively minor flux in the Cenozoic \citep{Isson2018a}. Formation of authigenic clays that scales with Ca and Mg concentration of riverine waters could decrease the \COtwo consumption associated with silicate weathering although the overall trend seen in this study would remain.
+Each parameter combination predicts a different total \COtwo consumption that should match the \COtwo degassing at steady-state. Hence, in the non-calibration GEOCLIM experiments, each parameter combination is used with its corresponding steady-state \COtwo degassing. In these estimates we are not including the effects of reverse weathering \citep{Michalopoulos1995a} as it is not clear how it should be parameterized and it is interpreted to be a relatively minor flux in the Cenozoic \citep{Isson2018a}. Formation of authigenic clays that scales with Ca and Mg concentration of riverine waters could decrease the \COtwo consumption associated with silicate weathering although the overall trend seen in this study would remain.
 
 \section*{Climate Model}
 
-For the climate model component of GEOCLIM, we use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. Temperature and runoff fields associated with \pCOtwo values between the three modeled \pCOtwo levels (286, 572, and 1144~ppm) are obtained through linear interpolation between the model results. Given that precipitation in this region is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water, the current approach is a reasonable approximation for SEAI. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable.
+For the climate model component of GEOCLIM, we use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. Temperature and runoff fields associated with \pCOtwo values between the three modeled \pCOtwo levels (286, 572, and 1144~ppm) are obtained through linear interpolation between the model results. Given that precipitation in SEAI is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water, the current approach is a reasonable approximation for this region. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable.
 
 \section*{SE Asian Islands Scenarios}
 
@@ -322,18 +322,18 @@ For the climate model component of GEOCLIM, we use temperature and runoff fields
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/scenario_pCO2_all.pdf}
-    \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the ten scenarios, each point represents an estimate from one of the 5,381 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched \COtwo consumption estimated from watershed data (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to the 2.5 and 97.5 percentile values. This figure is identical to Figure 2 in the main text, with the additional scenarios used to test the sensitivity of the results to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet.}
+    \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the 13 scenarios, each point represents an estimate from one of the 5,381 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched estimates of present-day \COtwo consumption in 80 watersheds around the world (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to the 2.5 and 97.5 percentile values. This figure is identical to Figure 2 in the main text, except for the addition of the scenarios used to test the sensitivity of the results to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet.}
     \label{fig:scenario_pCO2_all}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.5\textwidth]{Manuscript/Figures/paleogeographic_reconstructions.pdf}
+    \includegraphics[width=0.7\textwidth]{Manuscript/Figures/paleogeographic_reconstructions.pdf}
     \caption{Paleogeographically-reconstructed paleoshorelines for SEAI at 5, 10, and 15~Ma, using the paleogeographic model of \citet{Matthews2016a}.}
     \label{fig:paleogeographic_reconstructions}
 \end{figure}
 
-We use geological data to quantify the changes in the area of SEAI over the past 20~m.y. (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed SEAI'' scenario (Fig. \ref{fig:SEAI_fracs}), we remove all land associated with arc-continent collision in SEAI. To generate the lithologic map used in the ``paleo-SEAI'' scenarios (Fig. \ref{fig:SEAI_fracs}), we take the estimated paleoshorelines of SEAI for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of SEAI for their respective time slice. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of emerged pixels the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order (Fig. \ref{fig:paleogeographic_reconstructions}). We then add land in the region that is not exposed today. The assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Islands between Malaysia/Sumatra and Borneo are composed of granite and are surrounded by shallow marine siliciclastic sediments \citep{Darmadi2007a, Hall2009a, Hall2013b}. However, basement highs do not appear in the Gulf of Thailand, and seismic and drill core data suggest siliciclastic fluvial systems draining out toward the South China Sea when the shelf was exposed \citep{Darmadi2007a}. We therefore assign pixels of the Sunda Shelf between Malaysia/Sumatra and Borneo to be 50\% felsic and 50\% sediment, and pixels further to the north to be 100\% sediment. For the slope, we take the mean slope value (0.0043~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf. For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation. For other minor islands in the region that were exposed 15, 10, or 5~m.y. ago but are currently submerged, we take the same approach as that described for the Sunda Shelf to generate the runoff field. For the slope and lithology, we take the mean slope and Ca+Mg concentrations from neighbouring pixels. We also remove the Greenland ice sheet in the ``paleo-SEAI'' scenarios, to be consistent with Northern Hemisphere ice sheets developing after 5~Ma \citep{Haug2005a}. The runoff field over Greenland is generated using the same method as that for the Sunda Shelf. For the slope, we take the mean slope value (0.0529~m/m) of land for which slope data exists around the edges of Greenland, and assign this value to all pixels of Greenland covered by the ice sheet. We also assign the Ca+Mg concentration of bulk continental crust to these pixels.
+We use geological data to quantify the changes in the area of SEAI over the past 15~m.y. (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed SEAI'' scenario (Fig. \ref{fig:SEAI_fracs}), we remove all land associated with arc-continent collision in SEAI. To generate the lithologic map used in the ``paleo-SEAI'' scenarios (Fig. \ref{fig:SEAI_fracs}), we take the estimated paleoshorelines of SEAI for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of SEAI for their respective time slice. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of emerged pixels the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order (Fig. \ref{fig:paleogeographic_reconstructions}). We then add land in the region that is not exposed today. The assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Islands between Malaysia/Sumatra and Borneo are composed of granite and are surrounded by shallow marine siliciclastic sediments \citep{Darmadi2007a, Hall2009a, Hall2013b}. However, basement highs do not appear in the Gulf of Thailand, and seismic and drill core data suggest siliciclastic fluvial systems draining out toward the South China Sea when the shelf was exposed \citep{Darmadi2007a}. We therefore assign pixels of the Sunda Shelf between Malaysia/Sumatra and Borneo to be 50\% felsic and 50\% sediment, and pixels further to the north to be 100\% sediment. For the slope, we take the mean slope value (0.0043~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf. For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation. For other minor islands in the region that were exposed 15, 10, or 5~m.y. ago but are currently submerged, we take the same approach as that described for the Sunda Shelf to generate the runoff field. For the slope and lithology, we take the mean slope and Ca+Mg concentrations from neighbouring pixels. We also remove the Greenland ice sheet in the ``paleo-SEAI'' scenarios, to be consistent with Northern Hemisphere ice sheets developing after 5~Ma \citep{Haug2005a}. The runoff field over Greenland is generated using the same method as that for the Sunda Shelf. For the slope, we take the mean slope value (0.0529~m/m) of land for which slope data exists around the edges of Greenland, and assign this value to all pixels of Greenland covered by the ice sheet. We also assign the Ca+Mg concentration of bulk continental crust to these pixels.
 
 To explore the sensitivity of our results to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet, we also tested ``paleo-SEAI - Greenland'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``paleo-SEAI'' scenarios without the removal of the Greenland ice sheet. We also tested ``paleo-SEAI - Greenland - Sunda Shelf'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``paleo-SEAI'' scenarios without the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet. We find that the estimated steady state \pCOtwo's for the ``paleo-SEAI - Greenland'' and ``paleo-SEAI - Greenland - Sunda Shelf'' scenarios are only marginally higher than those of the ``paleo-SEAI'' scenarios (Fig. \ref{fig:scenario_pCO2_all}), suggesting that our results are relatively insensitive to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet. This insensitivity can be attributed to the low Ca+Mg concentrations of felsic and sediment lithologies in conjunction with the low relief across the Sunda Shelf, and the low runoff values at high latitudes.
 
