actually save the previous edits...

--- a/Code/Notebooks/figures.ipynb
+++ b/Code/Notebooks/figures.ipynb
@@ -527,7 +527,7 @@
     "         horizontalalignment='center', verticalalignment='center', transform=ax2.transAxes)\n",
     "\n",
     "plt.tight_layout()\n",
-    "#plt.savefig('../../Manuscript/Figures/shoreline_growth.pdf',bbox_inches='tight')\n",
+    "plt.savefig('../../Manuscript/Figures/shoreline_growth.pdf',bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
