Updates from Overleaf

--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -72,7 +72,7 @@
 \begin{document}
 
 \begin{flushleft}
-{\Large \textbf{Supplementary Information for ``Emergence of the SE Asian islands as a driver for Neogene cooling''}}
+{\Large \textbf{Supplementary Information for ``Emergence of the Southeast Asian islands as a driver for Neogene cooling''}}
 
 Yuem Park\textsuperscript{1},
 Pierre Maffre\textsuperscript{1},
@@ -310,12 +310,12 @@ Each parameter combination predicts a different total \COtwo consumption that sh
 
 For the climate model component of GEOCLIM, we use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. Temperature and runoff fields associated with \pCOtwo values between the three modeled \pCOtwo levels (286, 572, and 1144~ppm) are obtained through linear interpolation between the model results. Given that precipitation in SEAI is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water, the current approach is a reasonable approximation for this region. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable.
 
-\section*{SE Asian Islands Scenarios}
+\section*{Southeast Asian Islands Scenarios}
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/SEAI_fracs.jpg}
-    \caption{0.5\degrees $\times$ 0.5\degrees lithologic maps of the SE Asian islands (SEAI) used to force GEOCLIM. Only the 15~Ma scenarios are shown here, but the 10 and 5~Ma scenarios would be similar, using the 10 and 5~Ma shorelines shown in Figure 1 of the main text instead. Each column represents a tested scenario. Each row represents a lithologic category. Solid black lines show present-day shorelines.}
+    \caption{0.5\degrees $\times$ 0.5\degrees lithologic maps of the Southeast Asian islands (SEAI) used to force GEOCLIM. Only the 15~Ma scenarios are shown here, but the 10 and 5~Ma scenarios would be similar, using the 10 and 5~Ma shorelines shown in Figure 1 of the main text instead. Each column represents a tested scenario. Each row represents a lithologic category. Solid black lines show present-day shorelines.}
     \label{fig:SEAI_fracs}
 \end{figure}
 
